--- a/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
@@ -7,13 +7,16 @@
         <div class="add-chain-popup">
           <!-- Modal Header -->
           <div class="modal-header">
+            <span class="material-icons">
+              list
+            </span>
             <h4 class="modal-title">CHAIN</h4>
             <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()">
           </div>
           <!-- Modal body -->
           <div class="modal-body">
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label astrick">
+              <div class="col col-sm-5 label">
                 Chain ID
               </div>
               <div class="col col-sm-5">
@@ -23,7 +26,7 @@
               </div>
             </div>
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label astrick">
+              <div class="col col-sm-5 label">
                 Description
               </div>
               <div class="col col-sm-5">
@@ -35,7 +38,7 @@
               </div>
             </div>
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label astrick">
+              <div class="col col-sm-5 label ">
                 Email
               </div>
               <div class="col col-sm-5">
