--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -1,55 +1,17 @@
 <section class="content-wrap">
-
   <section class="table-heading">
-    <!-- <button   mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New</button> -->
     <div class="flex-wrap">
       <h1>Company Access</h1>
-      <div class="form-group search-box search">
-        <input type="text" class="form-control" #SearchInput [ngClass]="{'loading':isSearching}"
-          placeholder="Search here...">
-      </div>
     </div>
   </section>
   <section class="table-wrap">
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('UserID')" style="width: 20%;">
-            <span class="sort-wrap">
-              Id
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('user_name')" style="width: 20%;">
-            <span class="sort-wrap">
-              Users
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('CompanyID')" style="width: 20%;">
-            <span class="sort-wrap">
-              Company Id
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('CompanyName')" style="width: 20%;">
-            <span class="sort-wrap">
-              Company Name
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
+          <th (click)="sort('UserID')" style="width: 20%;"> Id </th>
+          <th (click)="sort('user_name')" style="width: 20%;"> Users </th>
+          <th (click)="sort('CompanyID')" style="width: 20%;"> Company Id </th>
+          <th (click)="sort('CompanyName')" style="width: 20%;"> Company Name </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -63,8 +25,8 @@
             <td style="width: 20%;">{{item.CompanyID}}</td>
             <td style="width: 20%;">{{item.CompanyName}}</td>
             <td class="btn-wrap">
-              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
-              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+              <span class="material-icons" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
