--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -15,47 +15,11 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')" style="width: 10%;">
-            <span class="sort-wrap">
-              Id
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('CompanyName')" style="width: 10%;">
-            <span class="sort-wrap">
-              Name
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span></th>
-          <th (click)="sort('Address1')" style="width: 20%;">
-            <span class="sort-wrap">
-              Address
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span></th>
-          <th (click)="sort('MobileNo')" style="width: 20%;">
-            <span class="sort-wrap">
-              Mobile
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span></th>
-          <th (click)="sort('Email')" style="width: 20%;">
-            <span class="sort-wrap">
-              Email
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span></th>
+          <th (click)="sort('id')" style="width: 10%;"> Id </th>
+          <th (click)="sort('CompanyName')" style="width: 10%;"> Name </th>
+          <th (click)="sort('Address1')" style="width: 20%;"> Address </th>
+          <th (click)="sort('MobileNo')" style="width: 20%;"> Mobile </th>
+          <th (click)="sort('Email')" style="width: 20%;"> Email </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -70,9 +34,8 @@
             <td style="width: 20%;">{{item.MobileNo}}</td>
             <td style="width: 20%;">{{item.Email}}</td>
             <td class="btn-wrap">
-              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
-              <button mat-flat-button class="btn btn-default" class="btn btn-default"
-                (click)="openDelete(item)">Remove</button>
+              <span class="material-icons" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
