--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -10,51 +10,11 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')" style="width: 10%;">
-            <span class="sort-wrap">
-              Id
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('ChainId')" style="width: 10%;">
-            <span class="sort-wrap">
-              Chain Code
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('ChainName')" style="width: 20%;">
-            <span class="sort-wrap">
-              Chain Name
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('LocationId')" style="width: 20%;">
-            <span class="sort-wrap">
-              Location Code
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('LocationName')" style="width: 20%;">
-            <span class="sort-wrap">
-              Location Name
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
+          <th (click)="sort('id')" style="width: 10%;"> Id </th>
+          <th (click)="sort('ChainId')" style="width: 10%;"> Chain Code </th>
+          <th (click)="sort('ChainName')" style="width: 20%;"> Chain Name </th>
+          <th (click)="sort('LocationId')" style="width: 20%;"> Location Code </th>
+          <th (click)="sort('LocationName')" style="width: 20%;"> Location Name </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -69,8 +29,8 @@
             <td style="width: 20%;">{{item.LocationId}}</td>
             <td style="width: 20%;">{{item.LocationName}}</td>
             <td class="btn-wrap">
-              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
-              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+              <span class="material-icons" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
