--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -10,60 +10,12 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('user_id')" style="width: 10%;">
-            <span class="sort-wrap">
-              Id
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('user_name')" style="width: 10%;">
-            <span class="sort-wrap">
-              Name
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('user_phone')" style="width: 20%;">
-            <span class="sort-wrap">
-              Mobile
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('user_email')" style="width: 20%;">
-            <span class="sort-wrap">
-              Email
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('UDID')" style="width: 10%;">
-            <span class="sort-wrap">
-              UUID
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('LoginPin')" style="width: 10%;">
-            <span class="sort-wrap">
-              Login Pin
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
+          <th (click)="sort('user_id')" style="width: 10%;">Id </th>
+          <th (click)="sort('user_name')" style="width: 10%;">Name </th>
+          <th (click)="sort('user_phone')" style="width: 20%;">Mobile </th>
+          <th (click)="sort('user_email')" style="width: 20%;">Email </th>
+          <th (click)="sort('UDID')" style="width: 10%;">UUID </th>
+          <th (click)="sort('LoginPin')" style="width: 10%;">Login Pin </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -79,8 +31,8 @@
             <td style="width: 10%;">{{item.UDID}}</td>
             <td style="width: 10%;">{{item.LoginPin}}</td>
             <td class="btn-wrap">
-              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
-              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+              <span class="material-icons" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
