--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -7,9 +7,7 @@
                 <div class="add-chain-popup">
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <span class="material-icons">
-                            list
-                        </span>
+                        <span class="material-icons"> list </span>
                         <h6 class="modal-title" *ngIf="!isEdit">ADD CHAIN</h6>
                         <h6 class="modal-title" *ngIf="isEdit">EDIT CHAIN</h6>
                         <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()">
