--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -24,7 +24,7 @@
             <td style="width: 20%;" class="curser-point" (click)="openView(item)">{{item.id}}</td>
             <td style="width: 20%;">{{item.ChainId}}</td>
             <td style="width: 30%;">{{item.ChainName}}</td>
-            <td class="btn-wrap">
+            <td style="width: 30%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
