--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -5,8 +5,6 @@
       <h1>Cost Center Access</h1>
     </div>
   </section>
-
-
   <section class="table-wrap">
     <table class="table table-main-head">
       <thead>
@@ -26,7 +24,7 @@
             <td class="curser-point" (click)="openView(item)" style="width: 30%;">{{item.username}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 30%;">
               {{item.fullaccess ==0 ?'Custom Access':'Full Access'}}</td>
-            <td class="btn-wrap">
+            <td style="width: 20%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
