--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -28,7 +28,7 @@
             <td style="width: 20%;">{{item.ChainName}}</td>
             <td style="width: 20%;">{{item.LocationId}}</td>
             <td style="width: 20%;">{{item.LocationName}}</td>
-            <td class="btn-wrap">
+            <td style="width: 20%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
