--- a/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
@@ -2,13 +2,12 @@
     <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
         <div>
             <div class="modal-content modal-content-area modal-md">
-
                 <!-- Modal Header -->
-                <div class="modal-header">
+                <div class="modal-header main-popup">
+                    <span class="material-icons"> list </span>
                     <h4 class="modal-title">COST CENTER ACCESS</h4>
                     <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
                 </div>
-
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div class="form-group-wrap row">
