--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -30,7 +30,7 @@
             <td style="width: 20%;">{{item.user_email}}</td>
             <td style="width: 10%;">{{item.UDID}}</td>
             <td style="width: 10%;">{{item.LoginPin}}</td>
-            <td class="btn-wrap">
+            <td style="width: 20%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
